review sp to en

--- a/contents/accessible/available.tex
+++ b/contents/accessible/available.tex
@@ -1,14 +1,14 @@
 \subsection{Availability}
     
-As we mentioned in the introduction to this chapter, the data sets may be available in the original source. However, this doesn't necessarily
+As we mentioned in the introduction to this chapter, the dataSets may be available in the original source. However, this doesn't necessarily
 mean that they are readily accessible.
-What are some of the challenges that we encounter with the raw data, direct from the source of origin? \\   
+The challenges we encounter with the raw data direct from the source of origin, are the following: \\   
  
-\textbf{Location}. Data sets are usually available in open data portals that have been organized and structured in particular ways.
+\textbf{Location}. DataSets are usually available in open data portals that have been organized and structured in particular ways.
 Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need. Sometimes the data may not all be available in the one location, but may require searching through multible portals.
-\textbf{Extraction}. Data sets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user. Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
+\textbf{Extraction}. DataSets are usually available through an API (Application Programming Interface). APIs are not easily interpretable by the average user. Normally there will be a document describing the fields and values presented, and indicating how to actually use the API. \\
 
-\textbf{Readability}. Data sets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
+\textbf{Readability}. DataSets are usually represented in a format designed to be processed by software. This is fairly unintelligible to a human user. At best,
 the data will be represented in a table and even then, it will often be quite difficult to extract the required information.
 
 Therefore, we can not say that data interfaces are commonly accessible in a useful way for the average user. \\
@@ -44,7 +44,7 @@ Our tool uses the air quality data provided by the city of Malaga in its open da
     This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
     Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.\\
     
-    In this case, if you click on the link, data is displayed in a new tab. The use of software
+    In this case, if we click on the link, data is displayed in a new tab. The use of software
     for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 
 AireGuru \footnote{\url{https:\\aire.guru}} offers all the necessary information on a web platform which has been designed to facilitate human understanding.
@@ -52,12 +52,12 @@ AireGuru \footnote{\url{https:\\aire.guru}} offers all the necessary information
 \elsparagraph{Evaluation}  
 
 \begin{itemize}
-    \done Location. Locating data is made simple, since information is displayed immediately on accessing the website. The main page
+    \done Location. Finding data is made simple, since information is displayed immediately on accessing the website. The main page
          presents the levels of pollution in all areas without the need to make any selection.
     \done Extraction. No specialist software or computer knowledge is necessary to access the information.
-    \done Readability. A map shows pollution levels, represented by different colors. These colors are defined by a legend
-         below the map. A glossary explains the concepts presented on the website, the meaning of each section and includes clear instructions on how to
-         browse the web page.
+    \done Readability. Aire Guru includes a map which shows pollution levels, represented by different colors. These colors are defined by a legend
+         below the map. It also includes a glossary explains the concepts presented on the website, the meaning of each section and includes clear instructions on how to
+         use and navigate through the web page.
  
 
 \end{itemize}
