--- a/contents/accessible/knowAbout.tex
+++ b/contents/accessible/knowAbout.tex
@@ -1,12 +1,13 @@
 \subsection{Know about}
 
-No matter how optimized the representation of the data is, if users are not aware of the existence of the resource, they can not use it.
+No matter how optimized the representation of the data is and how available we make it, if users are not aware
+ of the existence of the resource, they can not use it.
 
 \subsubsection{How to solve it} 
-The best way is to advertise the product in the appropriate environments.
+The best way is to advertise the product in the right media with right format.
 \subsubsection{How we solve it. Aire Guru} 
 Our tool is implemented for the city of Malaga, so we are currently working to publicize it in this city.
-It is currently available in the open data portal in the app tab \footnote {\url {https://datosabiertos.malaga.eu/aplicaciones}} \\
+It is currently available in the open data portal in the web site tab \footnote {\url {https://datosabiertos.malaga.eu/aplicaciones}} \\
 Aire Guru participated in the first open data reuse contest organized by the Malaga City Council \footnote {\url {https://tinyurl.com/yx9wzutj}}
 and was a finalist in the web page category.
 
