--- a/contents/accessible/model.tex
+++ b/contents/accessible/model.tex
@@ -1,6 +1,8 @@
 \subsection{Modelo}
 
-Recall that the main objective of accessing the data is to obtain knowledge, to understand and make sense of it. Of course, pure data by itself has no value until we can understand it and apply it. We must contextualize, process, and analyze the information to gain useful knowledge. \\
+Recall that the main objective of accessing the data is to obtain knowledge, to understand and make sense of it. Of course, 
+pure data by itself has no value until we can understand it and apply it. We must contextualize, process, and analyze the 
+information to gain useful knowledge. \\
     
 \begin{figure}[ht]
     \centering 
@@ -15,12 +17,13 @@ Recall that the main objective of accessing the data is to obtain knowledge, to 
       \caption{Diagrama. De datos a conocimiento}
     \end{figure}
  
-    In order to obtain this knowledge, the user must correctly interpret the data. It's not enough to know what the values and units individually represent, but what they mean in the big picture. For that the user must already have expertise in the area, or must engage in further research allowing them to understand the data that has been extracted.
-    understand the data extracted.
-    
+    In order to obtain this knowledge, the user must correctly interpret the data. It's not enough to know what the values and 
+    units individually represent, but what they mean in the big picture. For that the user must already have expertise in the 
+    area, or must engage in further research allowing them to understand the data that has been extracted.
+     
     In order to build a system that makes data accessible, it is essential to design a model to specify the
-    information that you want to obtain. The design of a system will allow that, based on given values, provide some results.
-    For this it will be necessary to have a solid knowledge of the data set that is needed, the values,
+    information that we want to obtain. The design of a system will allow that, based on given values, provide some results.
+    For this it will be necessary to have a solid knowledge of the dataSet that is needed, the values,
     their units and how they relate to each other.
 
 
@@ -40,10 +43,10 @@ the air quality index (AQI), specifically the European air quality index (EAQI).
     \caption{Aire Guru. Landing page. Top section}
 \end{figure}
 
-It shows the AQI in the whole city of Malaga by zones, both the general and the AQI of each of the agents
-contaminants in a more disaggregated form from September 2018 to the present. It also shows the evolution
+It shows the AQI in the whole city of Malaga by zones, both the general and the AQI of each of the 
+pollutans in a more disaggregated form from September 2018 to the present. It also shows the evolution
 of these for days, months and years.
-It is capable of creating a set of the most relevant polluting agents by medical condition. An innovative feature is the capacity to display levels of any particular agent by hour, day, month, or year. 
+It is capable of creating a set of the most relevant pollutans by medical condition. An innovative feature is the capacity to display levels of any particular pollutant by hour, day, month, or year. 
 
 \elsparagraph{Evaluation}  
 
