--- a/contents/compelling.tex
+++ b/contents/compelling.tex
@@ -1,6 +1,7 @@
 \newpage
 \section{Compelling}
-It is human nature to be attracted by the easy, the eye-catching, the interesting. We are more likely to expend time and energy on something we find attractive and compelling. We must design our interface and representations with this in mind, to attract users and maximize their engagement. 
+It is human nature to be attracted by the easy, the eye-catching, the interesting. We are more likely to expend time and energy 
+on something we find attractive and compelling. We must design our interface and representations with this in mind, to attract users and maximize their engagement. 
 There is a wealth of relevant marketing research that we can draw upon to capture new users and keep their interest.
 
 
