--- a/contents/compelling/attractive.tex
+++ b/contents/compelling/attractive.tex
@@ -12,7 +12,7 @@ Other more technical characteristics are: \\
 \textbf{Consistency.} Controls that perform similar actions must maintain the same design. Functionalities
 should also follow this principle. \\
 
-\textbf{Cleaning and order.} An organized design looks better and enables the user to find what they are looking for
+\textbf{Cleaning and order.} An organized design looks better, give a more peaceful feeling and enables the user to find what they are looking for
 more easily.\\
 
 \textbf{Details.} A label with different typology or other color may jarr the user's perception. Only use when
@@ -26,7 +26,7 @@ Certainly, at some point the novelty wears off, but, even so, the user has learn
 \subsubsection{How to solve it} 
 To make an attractive design, we must keep abreast of current trends, as well as study good design practices.
 It is highly recommended to maintain a simple and clean design, to use standards and mechanisms that are familiar to users,
-to care of details and to present a consistent identity.
+to care of details and to present our identity.
 \subsubsection{How we solve it. Aire Guru} 
 As we commented previously the design has been based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles and using colors that contrast the information from the background.
 The background color for the graphics is a neutral white. Only shades of blue, gray and white are used. In addition, we have chosen a font that is easy to read.
@@ -36,7 +36,7 @@ The sections are arranged neatly and structured by using a header and a body.
 The central page consists of a header, the body and a footer. Both the header and the footer are static,
 they are shown in all the pages and they contain all the information needed to navigate between pages.
 The body is divided into three horizontal sections, the upper area with the map and the general information about the selected point,
-the central area where we can filter the polluting agents by medical conditions and information about the current air status, and the
+the central area where we can filter the pollutans by medical conditions and information about the current air status, and the
 lower area where we will find the zone and custom history.
 
 \begin{figure}[ht]
@@ -45,7 +45,7 @@ lower area where we will find the zone and custom history.
     \caption{Heading}
 \end{figure}
  
-    The symbol of our tool is a genius, ie a guru. We also include "Aire" in the logo, because it perfectly represents 
+    The symbol of our tool is a genius, is a guru. We also include "Aire" in the logo, because it perfectly represents 
     what we show with our tool. Aire Guru is the genius of air.
     
     Finally, we've taken into account that the user may wish to use our tool on different devices. We've implemented
