--- a/contents/compelling/mission.tex
+++ b/contents/compelling/mission.tex
@@ -33,7 +33,7 @@ can clearly understand. It aims to make the information, and what that informati
 are, so that we can increase awareness and empower users to do something about it.
 
 
-Aire Guru includes in its glossary the most common medical conditions that may be affected by air pollution, the polluting agents and the sources that produce these agents. It is accompanied by an iconography
+Aire Guru includes in its glossary the most common medical conditions that may be affected by air pollution, the pollutans and the sources that produce these pollutans. It is accompanied by an iconography
 which reflects each of the symptoms. \\
 
 \begin{figure}[ht]
