--- a/contents/compelling/userExperience.tex
+++ b/contents/compelling/userExperience.tex
@@ -20,11 +20,11 @@ function that performs, so it makes no sense to design a brand new icon.
 It is important to give the user a degree of flexibility, that is, to enable them to make their own selections to be find the data that interests them.
 
 When we speak of fluidity, we refer to user-system interactions.It is important that interactions
-be like a two-way conversation, where you ask and let them know you are listening and responding. When the user
+be like a two-way conversation, where we ask and let them know we are listening and responding. When the user
 requires information from the system, they receive an indication that their request is being processed, and within no more than five seconds, an answer will be provided.
     
 \subsubsection{How to solve it} 
-We must analyze carefully what information we want to present. We will make a clear design, where all the elements are easy to recognize.
+We must analyze carefully what information we want to presentaccording to our objetive. We will make a clear design, where all the elements are easy to recognize.
 The structure will entail a logical sequence, as if it were a narrative history.
 Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
 We will steer clear of complicated representations, we will aim for familiarity and intuitiveness.
@@ -55,7 +55,7 @@ that are identified and agree to share their location, Air Guru will show the po
     \caption{My Location}
 \end{figure}
 
-Regarding flexibility, the user can see the state of the air pollution by dates. Intermediate filtering can be done both by medical conditions and by contaminants. Finally, in the lower area where we have
+Regarding flexibility, the user can see the state of the air pollution by dates. Intermediate filtering can be done both by medical conditions and by pollutans. Finally, in the lower area where we have
 the historical data by area and personalization, we can visualize the information with different levels of detail; time, day, month and year. We can also
 select the date we want.
 
@@ -103,7 +103,7 @@ select the date we want.
         \end{figure}
 
         The elements that give us familiarity are the iconography that we use to show the AQI. We use clouds representing
-             the air. The environment is accompanied by a heart if the quality is good, by an exclamation mark if it is poor, by a cross if it is
+             the air. The clouds are accompanied by a heart if the quality is good, by an exclamation mark if it is poor, by a cross if it is
              bad, and we change to a gas mask if the state is unhealthy.
             
              Today we are all familiar with GoogleMaps maps, so it makes sense to integrated this function.      
