--- a/contents/introduction/methodology.tex
+++ b/contents/introduction/methodology.tex
@@ -1,6 +1,6 @@
 \subsection*{Structure}
 
-In this chapter we will see how to make the data accessible, relevant and attractive for 
+In this chapter we will see how to make the data accessible, relevant and compelling for 
 the average user. For each one of the secluded ones, we will see the theory, as it has been applied
 in the Air Guru project and its evaluation.
 Next, we will see a general evaluation of these three concepts and to finish the 
