--- a/contents/introduction/motivation.tex
+++ b/contents/introduction/motivation.tex
@@ -15,7 +15,7 @@ Although these data are available to all users, it does not mean that they are u
 average user, since he faces multiple challenges. \\
 
 In the following sections, a tour through the necessary steps to make this data
-accessible, relevant and attractive for the average user.
+accessible, relevant and compelling for the average user.
 The objective of this chapter is to stipulate the necessary points to use the data in a profitable manner and
 to help us in our day to day in a useful way. These concepts have been applied in the Air Guru project,
 that brings the data to users in an easy, friendly, compressible and adapted to their needs. \\
