--- a/contents/relevant.tex
+++ b/contents/relevant.tex
@@ -1,7 +1,7 @@
 \newpage
 \section{Relevant}
- 
-Gathering as much unfiltered information as possible is not helpful to the user. What is helpful, is showing the user what is relevant and neccessary for their purposes, so that they can immediately interpret the data.\\
+A good representation of the data is not about show everything to allow the user to have all the information.
+What is helpful, is showing the user what is relevant and neccessary for their purposes, so that they can immediately interpret the data.\\
 
 In this section we will explore refining the data to offer the user relevant and quality targeted information.
 
