--- a/contents/compelling/advantage.tex
+++ b/contents/compelling/advantage.tex
@@ -8,14 +8,14 @@ It is very important to stay in the user's place and discover what is really nec
 the data and the influence that these have in their daily life, a commitment on the part of this will be possible.
 
 That is, the information should cover a need of the user, even if the user does not know a priori that he has this need. Maybe it's
-Our goal is to let you see how useful and advantageous this data usage can be.
+Our goal is to let he see how useful and advantageous this data usage can be.
 
 When we have some data that is updated periodically, we must think in what way the fluctuation may interest us or that certain
 changes Here comes the representation of the information in a way that awakens the need for data monitoring by
 of the user.
 
 \subsubsection{How to solve it} 
-First of all discover in what way the data can help users. Next you have to find a way to let him see
+First of all discover in what way the data can help users. Next we have to find a way to let him see
 because they are important to him and how he can benefit from using them in his daily life.
 If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
 Conduct a market study and see if there are already products that offer this information. If this is the case, it will be analyzed because
@@ -23,7 +23,7 @@ It is attractive to the user and try to improve it.
 
 \subsubsection{How we solve it. Aire Guru} 
 The user is offered a platform that indicates his exposure to totally customized air pollution if the need to carry
-no device for reading contaminants.
+no device for reading pollutans.
 
 
 
@@ -51,14 +51,14 @@ user can view the exposure to the pollution to which he has been subjected.
         \includegraphics[width=8cm]{importedDataDecember}
         \caption{Personal Records. December}
     \end{figure}
-    You can see the exposure to air pollution since 2018 without having to have been using the tool since
-    Using the import Google chronology button, you can import the location history provided by the
+    We can see the exposure to air pollution since 2018 without having to have been using the tool since
+    Using the import Google chronology button, we can import the location history provided by the
     pollution that has been exposed since 2018. In the help section we can find a guide how to
     export and import this history of locations.
 \elsparagraph{Evaluation}  
 \begin{itemize}
     \done Unique feature, fully customized pollution exposure monitoring
-    \done Description of the effects, polluting sources, description of the contaminants in a single platform
+    \done Description of the effects, polluting sources, description of the pollutans in a single platform
     \crossed Presenting how exposure to pollution can be reduced more specifically
     
 \end{itemize}
