--- a/contents/relevant/userOriented.tex
+++ b/contents/relevant/userOriented.tex
@@ -33,11 +33,9 @@ During the market study, we realized that many existing tools offered informatio
     \item Poor presentation. Often the information is presented in an uninterpreted form, making it difficult for users to visualize, especially in a geographic sense.
     \item Poor discrimination and interpretation. Many tools show individual values as a number or a colour. This information is not
     enough for the user to take control of their exposure. Such visualizations are not really compelling. 
-    \item Exposicion a la polucion de una forma personalizada. Nos interesa saber a que nivel de polucion estamos expuesto
-    a lo largo del tiempo, no de forma puntual.
-    \item Necesidad de utilizar complicated devices para monitorizar la exposicion. Nuestro objetivo es facilitar la informacion a los 
-    usuarios con el minimo de complicaciones posibles.
-    \item Sin informacion dedicada por condicion medica.
+    \item Unnexistent costumized pollutan's exposure. We are interested to know to which levels of pullutions we are exposed on the long term, no only in a determinate time.
+    \item Need to use complicated devices to monitor the exposition. Our gol is to facilitate the information to the user with the minimal complication for them.
+    \item No related information about pollutans and their influence on our health or medical conditions.
 \end{itemize}
 
 Once implemented, we tested the tool with 14 users. Our tool integrates Google Analytics that allow us to evaluate
@@ -57,7 +55,7 @@ user behavior, how many pages they access, and how long they stay on them. Also,
 \begin{itemize}
     \done The market study made us clearly see the shortcomings that exist in current applications.
     \done The survey gave us positive evaluations regarding the useability, interpretability, and depth of information reported.
-    \done Thanks to Aire Guru, users were informed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.
+    \done Thanks to Aire Guru, users noticed about medical conditions with the potential to affect them personally, that could be caused or made worse by air pollution.
 
 \end{itemize}
  
